# RohrBotik_SE2

./: .gitignore  readme.md
action_server_handler/: package.xml  setup.cfg  setup.py
interfaces/: CMakeLists.txt  package.xml
ldw_server/: setup.cfg  setup.py
move_server/: package.xml  setup.cfg
rohrbotik_ws/src/: readme.md  start_robot.py
rohrbotik_ws/src/action_server_handler/: package.xml  setup.py
rohrbotik_ws/src/cam_msgs/: CMakeLists.txt  package.xml
rohrbotik_ws/src/datagate/: __init__.py  bot_cam_datainput.py  cam.py  cam_VisionProcessor_logic.py  cam_data_Node.py  cam_data_logic.py  cam_data_pub_Node.py  cam_data_sub_Node.py  cam_vision_manager.py  paw_cam_sub.py  paw_kalibrieren.py  paw_test_vp.py
rohrbotik_ws/src/datagates/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rohrbotik_ws/src/datagates/datagates/: DELETE_manager.py  cam_VisionProcessor_logic.py  cam_data_pub_Node.py  cam_data_sub_Node.py  cam_subpub_Node.py  paw_kalibrieren_OHNEGUI.py  sub_test.py
rohrbotik_ws/src/datagates/msg/: MarkerInfo.msg
rohrbotik_ws/src/datagates/test/: cam_test.py
rohrbotik_ws/src/distance_pub/: package.xml  setup.cfg  setup.py
rohrbotik_ws/src/interfaces/: CMakeLists.txt  package.xml
rohrbotik_ws/src/launch_files/: package.xml  setup.py
rohrbotik_ws/src/ldw_server/: package.xml
rohrbotik_ws/src/move_server/: setup.py
rohrbotik_ws/src/rb3_bringup/: package.xml  setup.cfg  setup.py
rohrbotik_ws/src/rotate_server/: package.xml  setup.cfg  setup.py
rohrbotik_ws/src/traffic_server/: setup.cfg  setup.py
traffic_server/: package.xml
(+23 files in other folders)
